1.Modify custom collapse display bug.

--- a/src/app/components/development/development_app_manager/development_app_manager.css
+++ b/src/app/components/development/development_app_manager/development_app_manager.css
@@ -55,6 +55,7 @@ a:not(.collapsed) .triangle-small {
   top: 10px;
   border: 1px solid #e9ecef;
   background: #FFFFFF;
+  margin-bottom: 3rem;
 }
 
 .device-detail-form {
